--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.3.2",
+    "@prisma/client": "^5.18.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -56,15 +57,18 @@
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.1",
     "lucide-react": "^0.291.0",
+    "mongodb": "^6.8.0",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.12",
+    "pg": "^8.12.0",
     "postcss": "8.4.28",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "recharts": "^2.12.7",
     "sharp": "^0.32.5",
     "tailwind-merge": "^1.14.0",
